--- a/src/assets/styles/css/icon.css
+++ b/src/assets/styles/css/icon.css
@@ -1,15 +1,16 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?483ts5');
-  src:  url('fonts/icomoon.eot?483ts5#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?483ts5') format('truetype'),
-    url('fonts/icomoon.woff?483ts5') format('woff'),
-    url('fonts/icomoon.svg?483ts5#icomoon') format('svg');
+  src: url('../fonts/icomoon.eot?483ts5');
+  src: url('../fonts/icomoon.eot?483ts5#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?483ts5') format('truetype'),
+    url('../fonts/icomoon.woff?483ts5') format('woff'),
+    url('../fonts/icomoon.svg?483ts5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -25,122 +26,122 @@
 }
 
 .icon-A:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-add:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-back:before {
-  content: "\e902";
+  content: '\e902';
 }
 .icon-book:before {
-  content: "\e903";
+  content: '\e903';
 }
 .icon-book2:before {
-  content: "\e904";
+  content: '\e904';
 }
 .icon-bookmark:before {
-  content: "\e905";
+  content: '\e905';
 }
 .icon-bright:before {
-  content: "\e906";
+  content: '\e906';
 }
 .icon-cart:before {
-  content: "\e907";
+  content: '\e907';
 }
 .icon-check:before {
-  content: "\e908";
+  content: '\e908';
 }
 .icon-clock:before {
-  content: "\e909";
+  content: '\e909';
 }
 .icon-close-circle-fill:before {
-  content: "\e90a";
+  content: '\e90a';
 }
 .icon-close:before {
-  content: "\e90b";
+  content: '\e90b';
 }
 .icon-cn:before {
-  content: "\e90c";
+  content: '\e90c';
 }
 .icon-down:before {
-  content: "\e90d";
+  content: '\e90d';
 }
 .icon-down2:before {
-  content: "\e90e";
+  content: '\e90e';
 }
 .icon-download-remove:before {
-  content: "\e90f";
+  content: '\e90f';
 }
 .icon-download:before {
-  content: "\e910";
+  content: '\e910';
 }
 .icon-en:before {
-  content: "\e911";
+  content: '\e911';
 }
 .icon-forward:before {
-  content: "\e912";
+  content: '\e912';
 }
 .icon-headphone:before {
-  content: "\e913";
+  content: '\e913';
 }
 .icon-menu:before {
-  content: "\e914";
+  content: '\e914';
 }
 .icon-more:before {
-  content: "\e915";
+  content: '\e915';
 }
 .icon-move:before {
-  content: "\e916";
+  content: '\e916';
 }
 .icon-person:before {
-  content: "\e917";
+  content: '\e917';
 }
 .icon-play_backward:before {
-  content: "\e918";
+  content: '\e918';
 }
 .icon-play_forward:before {
-  content: "\e919";
+  content: '\e919';
 }
 .icon-play_go:before {
-  content: "\e91a";
+  content: '\e91a';
 }
 .icon-play_pause:before {
-  content: "\e91b";
+  content: '\e91b';
 }
 .icon-private-see:before {
-  content: "\e91c";
+  content: '\e91c';
 }
 .icon-private:before {
-  content: "\e91d";
+  content: '\e91d';
 }
 .icon-progress:before {
-  content: "\e91e";
+  content: '\e91e';
 }
 .icon-pull_down:before {
-  content: "\e91f";
+  content: '\e91f';
 }
 .icon-search:before {
-  content: "\e920";
+  content: '\e920';
 }
 .icon-selected:before {
-  content: "\e921";
+  content: '\e921';
 }
 .icon-settings:before {
-  content: "\e922";
+  content: '\e922';
 }
 .icon-shake:before {
-  content: "\e923";
+  content: '\e923';
 }
 .icon-share:before {
-  content: "\e924";
+  content: '\e924';
 }
 .icon-shelf:before {
-  content: "\e925";
+  content: '\e925';
 }
 .icon-speak:before {
-  content: "\e926";
+  content: '\e926';
 }
 .icon-up:before {
-  content: "\e927";
+  content: '\e927';
 }
