阅读器解析渲染，翻页，UI，字号，字体，字体国际化，阅读器主题，全局主题，环境变量

--- a/src/assets/styles/css/global.scss
+++ b/src/assets/styles/css/global.scss
@@ -1,5 +1,21 @@
 // 设置rem 自适应
 $ratio: 375 / 10;
-@function ptr($px) {
+@function px2rem($px) {
   @return $px / $ratio + rem;
+}
+
+@mixin center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@mixin left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+@mixin right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
