阅读进度及其相应功能

--- a/src/assets/styles/css/global.scss
+++ b/src/assets/styles/css/global.scss
@@ -19,3 +19,9 @@ $ratio: 375 / 10;
   justify-content: flex-end;
   align-items: center;
 }
+
+@mixin ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
