--- a/src/assets/styles/css/animation.scss
+++ b/src/assets/styles/css/animation.scss
@@ -5,32 +5,17 @@
 .slide-up-enter,
 .slide-up-leave-to {
   transform: translate(0, px2rem(138));
+  opacity: 0;
+}
+.slide-up-enter-to,
+.slide-up-leave {
+  opacity: 1;
 }
 .slide-down-enter-to,
 .slide-down-leave,
 .slide-up-enter-to,
 .slide-up-leave {
   transform: translate(0, 0);
-}
-.slide-down-enter-active,
-.slide-down-leave-active,
-.slide-up-enter-active,
-.slide-up-leave-active,
-.fade-enter-active,
-.fade-leave-active,
-.slide-right-enter-active,
-.slide-right-leave-active,
-.popup-slide-up-enter-active,
-.popup-slide-up-leave-active {
-  transition: all 0.3s linear;
-}
-.fade-enter,
-.fade-leave-to {
-  opacity: 0;
-}
-.fade-enter-to,
-.fade-leave {
-  opacity: 1;
 }
 .popup-slide-up-enter,
 .popup-slide-up-leave-to {
@@ -42,3 +27,43 @@
   transform: translate3d(0, 0, 0);
   opacity: 1;
 }
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+.fade-enter-to,
+.fade-leave {
+  opacity: 1;
+}
+.slide-right-enter,
+.slide-right-leave-to {
+  transform: translate3d(-100%, 0, 0);
+}
+.slide-right-enter-to,
+.slide-right-leave
+// .fade-slide-right-enter-to,
+// .fade-slide-right-leave 
+ {
+  transform: translate3d(0, 0, 0);
+}
+.slide-down-enter-active,
+.slide-down-leave-active,
+.slide-up-enter-active,
+.slide-up-leave-active,
+.popup-slide-up-enter-active,
+.popup-slide-up-leave-active,
+.fade-enter-active,
+.fade-leave-active,
+.slide-right-enter-active,
+.slide-right-leave-active
+// .fade-slide-right-enter-active,
+// .fade-slide-right-leave-active 
+ {
+  transition: all 0.3s linear;
+}
+
+// .fade-slide-right-enter,
+// .fade-slide-right-leave-to {
+//   transform: translate3d(-100%, 0, 0);
+//   opacity: 0;
+// }
