--- a/src/assets/styles/css/global.scss
+++ b/src/assets/styles/css/global.scss
@@ -25,3 +25,12 @@ $ratio: 375 / 10;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+@mixin ellipsis2($line) {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: $line;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: keep-all;
+}
