页眉,页脚,自适应布局优化

--- a/src/assets/styles/css/reset.scss
+++ b/src/assets/styles/css/reset.scss
@@ -136,4 +136,5 @@ body {
   overflow: hidden;
   font-family: 'PingFangSC-Light', 'PingFang SC', 'STHeitiSC-Light', 'Helvetical-Light', 'Arial',
     'sans-serif';
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
