书城首页,标题,搜索框,热门搜索交互

--- a/src/assets/styles/css/global.scss
+++ b/src/assets/styles/css/global.scss
@@ -3,7 +3,8 @@ $ratio: 375 / 10;
 @function px2rem($px) {
   @return $px / $ratio + rem;
 }
-
+$animationTime: 0.2s;
+$animationType: linear;
 @mixin center {
   display: flex;
   justify-content: center;
@@ -33,4 +34,19 @@ $ratio: 375 / 10;
   overflow: hidden;
   text-overflow: ellipsis;
   word-break: keep-all;
+}
+@mixin columnLeft {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.icon {
+  color: #666;
+  font-size: px2rem(16);
+}
+.title {
+  color: #666;
+  font-size: px2rem(16);
+  font-weight: bold;
 }
