--- a/src/assets/styles/css/animation.scss
+++ b/src/assets/styles/css/animation.scss
@@ -40,11 +40,20 @@
   transform: translate3d(-100%, 0, 0);
 }
 .slide-right-enter-to,
-.slide-right-leave
-// .fade-slide-right-enter-to,
-// .fade-slide-right-leave 
- {
+.slide-right-leave,
+.title-move-enter-to,
+.title-move-leave,
+.hot-search-move-enter-to,
+.hot-search-move-leave {
   transform: translate3d(0, 0, 0);
+}
+.title-move-enter,
+.title-move-leave-to {
+  transform: translate3d(0, px2rem(10), 0);
+}
+.hot-search-move-enter,
+.hot-search-move-leave-to {
+  transform: translate3d(0, px2rem(30), 0);
 }
 .slide-down-enter-active,
 .slide-down-leave-active,
@@ -55,15 +64,10 @@
 .fade-enter-active,
 .fade-leave-active,
 .slide-right-enter-active,
-.slide-right-leave-active
-// .fade-slide-right-enter-active,
-// .fade-slide-right-leave-active 
- {
-  transition: all 0.3s linear;
+.slide-right-leave-active,
+.title-move-enter-active,
+.title-move-leave-active,
+.hot-search-move-enter-active,
+.hot-search-move-leave-active {
+  transition: all 0.2s linear;
 }
-
-// .fade-slide-right-enter,
-// .fade-slide-right-leave-to {
-//   transform: translate3d(-100%, 0, 0);
-//   opacity: 0;
-// }
