flapCard动画bug修复 图片懒加载

--- a/src/assets/styles/css/index.scss
+++ b/src/assets/styles/css/index.scss
@@ -2,3 +2,10 @@
 @import './icon.css';
 @import './reset.scss';
 @import './animation.scss';
+
+// @media screen and(min-width:768px) {
+//   html,
+//   body {
+//     width: 768px;
+//   }
+// }
